--- a/src/app/edit/edit.html
+++ b/src/app/edit/edit.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="logo inside col-md-12">
-        <a onClick="window.history.go(-2); return false;"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
+        <a ui-sref="home"><img src="assets/images/logo-muller-small.png" alt="" class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -185,13 +185,17 @@
 						</div> -->
 
 					</div>
-          <div class="form-group">
-						<div class="col-md-2" ng-repeat="l in edit.profile.thumbs track by $index">
-							<div class="" style="position:relative;">
-								<img ng-src="{{l.thumb}}"  height="100px" width="100px">
+          <div class="form-group" vertilize-container>
+						<div class="col-md-3" ng-repeat="l in edit.profile.thumbs track by $index">
+							<div class="" style="position:relative;" vertilize>
+								<img ng-src="{{l.thumb}}"  class="img-responsive" style="min-width:100%">
 								<span style="postion:absolute;top:0px;right:0px;z-index:2; position:absolute" ng-click="edit.imageDelete($index, l.name)">
                   X
 								</span>
+                <div style="word-break: break-all">
+
+                  {{l.client_name}}
+                </div>
 							</div>
 						</div>
 					</div>
@@ -199,7 +203,7 @@
 
 					</div>
 
-					<div class="col-md-12 btn-holder"><button type="submit"  class="btn btn-green">Submit</button></div>
+					<div class="col-md-12 btn-holder"><button type="submit"  class="btn btn-green"><i class="fa fa-circle-o-notch fa-spin" ng-if="edit.submitting"></i> Submit</button></div>
 
 				</form>
 			</div>
