--- a/src/app/reminder/reminder.html
+++ b/src/app/reminder/reminder.html
@@ -32,8 +32,9 @@
 
     <div class="row">
       <!-- <div class="post-title col-md-12"><h3>Gartenunterhalt</h3></div>				 -->
-      <form class="form-erinnerung">
-        <div class="form-group" ng-repeat="list in remind.lists | unique: 'id'"  ng-if="list.status == '0'">
+      <form class="form-erinnerung" infinite-scroll="remind.getList()" infinite-scroll-disabled="remind.disableInfiniteScroll" infinite-scroll-distance="1">
+
+        <div class="form-group" ng-repeat="list in remind.lists"  ng-if="list.status == '0'"  >
           <div class="post-icons col-md-1 col-sm-1 col-xs-2">
             <input type="checkbox"   radio-check="list"  ng-checked="list.status==1" data="remind.lists" name="maintenance" id="maintenance" value="{{list}}" >
           </div>
@@ -68,7 +69,7 @@
     <div class="modal-body">
       <form name="postForm"  novalidate="">
 
-        <input type="text" name="text" ng-model="newText" text="" class="form-control" placeholder="Titel" required>
+        <input type="text" name="text" ng-model="remind.newText" text="" class="form-control"  required>
         <div class="text-warning" ng-if="postForm.$submitted && postForm.text.$invalid">
           <p ng-if="postForm.text.$error.required">
             Please enter text
@@ -78,7 +79,8 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-cancel" data-dismiss="modal">Abbrechen</button>
-      <button type="button" ng-click="remind.submit(newText)" class="btn btn-save">Speichern</button>
+      <button type="button" ng-disabled="remind.submitting" ng-click="remind.submit(remind.newText)" class="btn btn-save"> <i ng-if="remind.submitting" class="fa fa-circle-o-notch fa-spin fa-1x">
+      </i> Speichern</button>
     </div>
   </div>
 </div>
